# mcp-testes

./: .dockerignore  .env.compose  .env.compose.example  .gitignore  DEPLOYMENT.md  DOCKER-COMPOSE.md  Dockerfile  README.md  compose.override.yaml  compose.yaml  config.toml  config.toml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
assets/Agents.Testing/: AI-SAVINGS-REPORT-TEMPLATE.md  ORCHESTRATOR.md  README.md  TEST-DEBT-AGENT.md  TEST-METRICS-AGENT.md  TEST-METRICS-LOG-TEMPLATE.md  TEST-REVIEWER-AGENT.md  TEST-STANDARDS-AGENT.md  TEST-WRITER-AGENT.md  TIME-TRACKING-PROTOCOL.md
examples/: codex.mobility-api.config.toml  codex.mobility-app-api.config.toml  mcp.config.example.json  mobility-api.context.toml  mobility-app-api.context.toml  nginx.gosystem-test-mcp.conf  two-apis.bootstrap.example.md
examples/systemd/: gosystem-test-mcp.service
scripts/: bootstrap-two-apis.py  run-http.sh  run-local-with-toml.cmd  run-local-with-toml.sh  run-local.cmd  run-local.sh
src/digital_solutions_test_mcp/: core.py  server.py  workspace_hooks.py
src/gosystem_test_mcp/: core.py  server.py
