[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-solutions-test-mcp"
version = "1.0.0"
description = "MCP server for automatic .NET test orchestration, generation, coverage, and AI productivity metrics"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Digital Solutions" }]
dependencies = [
  "mcp>=1.12.4",
  "pydantic>=2.8.0"
]

[project.scripts]
digital-solutions-test-mcp = "digital_solutions_test_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
